--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,6 @@
-# The following redirect is intended for use with most SPA's that handles routing internally.
+[build]
+  publish = "public/"
+  command = "npm run build"
 [[redirects]]
   from = "/*"
   to = "/index.html"
