--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "frontend-starter-kit",
+    "name": "yetric-ui-kit",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
