--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "css-loader": "^3.2.0",
         "cssnano": "^4.1.10",
         "favicons-webpack-plugin": "^1.0.2",
+        "file-loader": "^4.2.0",
         "html-webpack-plugin": "^3.2.0",
         "husky": "^3.0.9",
         "jest": "^24.9.0",
