ncu -u, remove unused libs, bump html-webpack-plugin and add purgecss

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "yetric-ui-kit",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -23,60 +23,59 @@
     },
     "homepage": "https://github.com/hising/frontend-starter-kit#readme",
     "dependencies": {
-        "@types/fingerprintjs2": "^2.0.0",
-        "@types/jest": "^24.0.19",
-        "@types/react": "^16.9.9",
-        "@types/react-dom": "^16.9.2",
-        "@types/react-router-dom": "^5.1.0",
-        "antd": "^3.24.2",
-        "fingerprintjs2": "^2.1.0",
-        "formik": "^1.5.8",
-        "mobx": "^5.14.2",
-        "mobx-react": "^6.1.4",
-        "react": "^16.11.0",
-        "react-dom": "^16.11.0",
+        "@types/jest": "^25.1.3",
+        "@types/react": "^16.9.23",
+        "@types/react-dom": "^16.9.5",
+        "@types/react-router-dom": "^5.1.3",
+        "antd": "^4.0.0",
+        "mobx": "^5.15.4",
+        "mobx-react": "^6.1.8",
+        "react": "^16.13.0",
+        "react-dom": "^16.13.0",
         "react-router-dom": "^5.1.2"
     },
     "devDependencies": {
-        "@babel/core": "^7.6.4",
-        "@babel/plugin-proposal-class-properties": "^7.5.5",
-        "@babel/plugin-proposal-decorators": "^7.6.0",
-        "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
-        "@babel/plugin-transform-async-to-generator": "^7.5.0",
-        "@babel/preset-env": "^7.6.3",
-        "@babel/preset-react": "^7.6.3",
-        "@babel/preset-typescript": "^7.6.0",
-        "babel-jest": "^24.9.0",
+        "@babel/core": "^7.8.6",
+        "@babel/plugin-proposal-class-properties": "^7.8.3",
+        "@babel/plugin-proposal-decorators": "^7.8.3",
+        "@babel/plugin-proposal-object-rest-spread": "^7.8.3",
+        "@babel/plugin-transform-async-to-generator": "^7.8.3",
+        "@babel/preset-env": "^7.8.6",
+        "@babel/preset-react": "^7.8.3",
+        "@babel/preset-typescript": "^7.8.3",
+        "babel-jest": "^25.1.0",
         "babel-loader": "^8.0.6",
-        "babel-plugin-import": "^1.12.2",
+        "babel-plugin-import": "^1.13.0",
         "clean-webpack-plugin": "^3.0.0",
-        "css-loader": "^3.2.0",
+        "css-loader": "^3.4.2",
         "cssnano": "^4.1.10",
-        "favicons-webpack-plugin": "^1.0.2",
-        "file-loader": "^4.2.0",
-        "html-webpack-plugin": "^3.2.0",
-        "husky": "^3.0.9",
-        "jest": "^24.9.0",
-        "lint-staged": "^9.4.2",
-        "mini-css-extract-plugin": "^0.8.0",
-        "node-sass": "^4.12.0",
+        "favicons-webpack-plugin": "^3.0.1",
+        "file-loader": "^5.1.0",
+        "glob-all": "^3.1.0",
+        "html-webpack-plugin": "^4.0.0-beta.11",
+        "husky": "^4.2.3",
+        "jest": "^25.1.0",
+        "lint-staged": "^10.0.8",
+        "mini-css-extract-plugin": "^0.9.0",
+        "node-sass": "^4.13.1",
         "optimize-css-assets-webpack-plugin": "^5.0.3",
         "postcss-import": "^12.0.1",
         "postcss-loader": "^3.0.0",
         "postcss-preset-env": "^6.7.0",
-        "prettier": "^1.18.2",
+        "prettier": "^1.19.1",
         "prettier-check": "^2.0.0",
-        "react-hot-loader": "^4.12.15",
-        "sass-loader": "^8.0.0",
-        "style-loader": "^1.0.0",
-        "terser-webpack-plugin": "^2.2.1",
-        "tslint": "^5.20.0",
-        "typescript": "^3.6.4",
-        "webpack": "^4.41.2",
+        "purgecss-webpack-plugin": "^2.1.0",
+        "react-hot-loader": "^4.12.19",
+        "sass-loader": "^8.0.2",
+        "style-loader": "^1.1.3",
+        "terser-webpack-plugin": "^2.3.5",
+        "tslint": "^6.0.0",
+        "typescript": "^3.8.2",
+        "webpack": "^4.41.6",
         "webpack-ant-icon-loader": "^1.0.8",
         "webpack-bundle-analyzer": "^3.6.0",
-        "webpack-cli": "^3.3.9",
-        "webpack-dev-server": "^3.9.0",
+        "webpack-cli": "^3.3.11",
+        "webpack-dev-server": "^3.10.3",
         "webpack-merge": "^4.2.2",
         "webpack-monitor": "^1.0.14"
     },
