--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,19 @@
 {
-  "compilerOptions": {
-    "outDir": "./dist/",
-    "sourceMap": true,
-    "noImplicitAny": true,
-    "moduleResolution": "node",
-    "allowJs": true,
-    "noEmit": true,
-    "strict": true,
-    "module": "commonjs",
-    "target": "esnext",
-    "jsx": "react",
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "resolveJsonModule": true
-  },
-  "include": [
-    "./src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "resources"
-  ]
+    "compilerOptions": {
+        "outDir": "./dist/",
+        "sourceMap": true,
+        "noImplicitAny": true,
+        "moduleResolution": "node",
+        "allowJs": true,
+        "noEmit": true,
+        "strict": true,
+        "module": "commonjs",
+        "target": "esnext",
+        "jsx": "react",
+        "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "resolveJsonModule": true
+    },
+    "include": ["./src/**/*", "./.d.ts"],
+    "exclude": ["node_modules", "dist", "resources"]
 }
