--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,10 @@
 {
   "singleQuote": false,
-  "printWidth": 80,
+  "printWidth": 120,
   "useTabs": false,
   "tabWidth": 4,
   "jsxBracketSameLine": true,
   "semi": true,
-  "bracketSpacing": false,
+  "bracketSpacing": true,
   "arrowParens": "always"
 }
