--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@types/react-dom": "^16.9.5",
         "@types/react-router-dom": "^5.1.3",
         "antd": "^4.0.0",
+        "core-js": "^3.6.4",
         "mobx": "^5.15.4",
         "mobx-react": "^6.1.8",
         "react": "^16.13.0",
